<resources>
    <string name="app_name">baseauthentication</string>
    <string name="forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="register">Bạn chưa có tài khoản ICAR ?<u> Đăng ký</u></string>
    <string name="otp">Bạn chưa nhận được mã OTP ?<u> Gửi lại</u></string>
    <string name="skip">Bỏ qua</string>
    <string name="trial">Dùng thử</string>
    <string name="login">Đăng nhập</string>
    <string name="option_login_description">Lựa chọn đăng nhập để ghép nối với ICAR hoặc bỏ qua để sử dụng tính năng cơ bản</string>
    <string name="login_description">Bạn cần sử dụng tài khoản ICAR để đăng nhập vào ứng dụng</string>
    <string name="qr_code">Mã QR</string>
    <string name="qr_description">Quét mã QR bằng ứng dụng ICAR để ghép nối với thiết bị IP24</string>
    <string name="recreate_qr">Tạo lại mã</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="limit_login_devices">Giới hạn thiết bị đăng nhập</string>
    <string name="signup">Đăng Ký</string>
    <string name="signup_description">Nhập số điện thoại của bạn, sau đó nhập mã OTP để thiết lập mật khẩu</string>
    <string name="send">Gửi</string>
    <string name="code_otp">Mã OTP</string>
    <string name="enter_password">Nhập mật khẩu:</string>
    <string name="enter_the_password">Nhập lại mật khẩu</string>
    <string name="search">Tìm kiếm</string>
    <string name="setting">Cài đặt</string>
    <string name="logout_description">Khi bạn đăng xuất khỏi thiết bị này, mọi quyền truy cập từ tài khoản của bạn vào thiết bị sẽ bị vô hiệu hóa</string>
    <string name="cancel">Hủy</string>
    <string name="logout">Đăng xuất</string>
    <string name="version">Phiên bản:</string>
    <string name="developers">Nhà phát triển:</string>
    <string name="duration">Thời hạn</string>
    <string name="feature">Tính năng:</string>
    <string name="language">Ngôn ngữ</string>
    <string name="internet_error">Vui lòng kiểm tra kết nối internet</string>
    <string name="phone_number_error">Vui lòng nhập số điện thoại</string>
    <string name="long_phone_number">Số điện thoại phải có 10 số</string>
    <string name="otp_error">Vui lòng nhập đúng mã otp</string>
    <string name="password_error">Vui long nhập mật khẩu</string>
    <string name="repassword_error">Vui lòng nhập lại mật khẩu</string>
    <string name="repasswork_not_match">Mật khẩu nhập lại không trùng với mật khẩu</string>
    <string name="content_logout_device">Khi bạn đăng xuất khỏi thiết bị này, mọi quyền truy cập từ tài khoản của bạn vào thiết bị sẽ bị vô hiệu hóa</string>
    <string name="logout_device">\"Đămg xuất khởi \"</string>
    <string name="send_otp_success">Mã otp đã được gửi tới số điện thoại</string>
    <string name="otp_success">Mã otp chính xác, Vui lòng nhập mật khẩu mới</string>
    <string name="note_user_partner">Lưu ý: Tài khoản của bạn đã là tài khoản đại lý trước đó, hãy sử dụng mật khẩu của đại lý để đăng nhập cho lần sau</string>
</resources>