<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/size500dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="@dimen/size25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/txt_title"
                    android:layout_width="@dimen/size194dp"
                    android:layout_height="@dimen/size124dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="@dimen/size30dp"
                    android:layout_marginTop="@dimen/size20dp"
                    android:src="@drawable/ic_header_logo" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="@dimen/size40dp"
                    android:layout_marginTop="@dimen/size16dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/size2dp"
                    android:maxLines="3"
                    android:text="@string/login_description"
                    android:textColor="#767676"
                    android:textSize="@dimen/size13sp"  />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size50dp"
                    android:layout_below="@id/txt_description"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/size35dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/btn_left"
                        android:layout_width="@dimen/size150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/bg_btn_login"
                        android:ellipsize="end"
                        android:fontFamily="@font/svn_poppins_semibold"
                        android:includeFontPadding="false"
                        android:maxLines="3"
                        android:paddingVertical="@dimen/size14dp"
                        android:text="@string/skip"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/size11sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/btn_right"
                        android:layout_width="@dimen/size150dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/bg_btn_login"
                        android:ellipsize="end"
                        android:fontFamily="@font/svn_poppins_semibold"
                        android:includeFontPadding="false"
                        android:maxLines="3"
                        android:paddingVertical="@dimen/size14dp"
                        android:text="@string/login"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/size11sp" />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>